--- a/book-app/src/components/Layout.module.css
+++ b/book-app/src/components/Layout.module.css
@@ -1,11 +1,12 @@
-/* Layout.module.css */
-.layout {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+.container {
+  max-width: 640px;
+  height: 100vh;
+  margin: 0 auto;
 }
 
 .main {
-  flex: 1;
-  padding: 2rem;
+  padding: 24px;
+  height: calc(100vh - 56px);
+  overflow-y: scroll;
+  background-color: #f9f9f9;
 }
